--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="image-left">
                 <img src="https://media.thereformation.com/image/upload/f_auto,q_auto,dpr_auto/w_600/PRD-SFCC/1316674/CAMEL/1316674.2.CAMEL?_s=RAABAB0" alt="Model standing by a fence wearing Aurora clothing">
                 <div class="text-overlay">
-                    <h2>New This Week</h2>
+                    <h2>All New</h2>
                     <p><a href="https://www.thereformation.com/sweaters" target="_blank" rel="noopener noreferrer">Oh look. We made more cute stuff.</a></p>
                 </div>
             </div>
