--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta name="description"
+        content="Discover sustainable, stylish, and eco-friendly fashion at Aurora. From dresses to everyday essentials, explore ethically-made clothing designed to last. Free shipping and easy returns on all orders!">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
